# JS_Parser

./: .gitignore  .gitlab-ci.yml  .merlin  .travis.yml  JS_Parser-runtime.install  JS_Parser-runtime.opam  JS_Parser.install  JS_Parser.itarget  JS_Parser.opam  Makefile  README.md  _tags  concerns  dune-project  ola.js  opam  package.json  run_tests.js  simple_print.js  test.js
.github/workflows/: build.yml
esy.lock/: index.json
lib/: npm-shrinkwrap.json  ola.json  package.json  run_doctrine.js  run_esprima.js
perso/: dune  main.ml
scripts/: JSIL_add_promises_header.py  JSIL_parse.py  promises_add_header.py  runParserInFolder.py
src/: .merlin  Constants.ml  Error.ml  Error.mli  JS2JS.ml  JSParser.ml  JSParserConsole.ml  JSParserConstants.ml  JSParserMain.ml  JSParserSyntax.ml  JSPrettyPrint.ml  JS_Parser.ml  JS_Parser.mli  JS_Parser.mllib  JS_Parser.odocl  META-runtime.in  META.in  OfFlow.ml  PrettyPrint.ml  Syntax.ml  dune  parser.ml  parser_json.ml  parser_json.mli  parser_main.ml  parser_main.mli  parser_syntax.ml  parser_xml.ml  parser_xml.mli  pretty_print.ml
src/backup/: JSParserMain_old.ml_bak  JSParser_old.ml_bak  JS_Parser.mllib
test/: JSParserTests.ml  dune  parser_tests.ml  parser_xml_tests.ml  utils.ml
tests/Promise/Promise_filtered/: reject-via-fn-deferred-queue.js  reject-via-fn-deferred.js  reject-via-fn-immed-queue.js  reject-via-fn-immed.js
tests/Promise/Promise_filtered_JSIL/: __allSettled_call-resolve-element-after-return.js  __allSettled_call-resolve-element-items.js  __allSettled_call-resolve-element.js  __allSettled_capability-executor-called-twice.js  __allSettled_capability-executor-not-callable.js  __allSettled_capability-resolve-throws-reject.js  __allSettled_ctx-ctor-throws.js  __allSettled_ctx-non-ctor.js  __allSettled_ctx-non-object.js  __allSettled_does-not-invoke-array-setters.js  __allSettled_invoke-resolve-error-reject.js  __allSettled_invoke-resolve-get-error-reject.js  __allSettled_invoke-resolve-get-once-multiple-calls.js  __allSettled_invoke-resolve-get-once-no-calls.js  __allSettled_invoke-resolve-return.js  __allSettled_invoke-resolve.js  __allSettled_invoke-then-error-reject.js  __allSettled_invoke-then-get-error-reject.js  __allSettled_invoke-then.js  __allSettled_is-function.js  __allSettled_length.js  __allSettled_name.js  __allSettled_new-reject-function.js  __allSettled_new-resolve-function.js  __allSettled_prop-desc.js  __allSettled_reject-deferred.js  __allSettled_reject-element-function-extensible.js  __allSettled_reject-element-function-length.js  __allSettled_reject-element-function-name.js  __allSettled_reject-element-function-nonconstructor.js  __allSettled_reject-element-function-prototype.js  __allSettled_reject-ignored-deferred.js  __allSettled_reject-ignored-immed.js  __allSettled_reject-immed.js  __allSettled_resolve-before-loop-exit-from-same.js  __allSettled_resolve-before-loop-exit.js  __allSettled_resolve-element-function-extensible.js  __allSettled_resolve-element-function-length.js  __allSettled_resolve-element-function-name.js  __allSettled_resolve-element-function-nonconstructor.js  (+304 more)
tests/Promise/Promise_filtered_parsed/: __allSettled_call-resolve-element-after-return.js  __allSettled_call-resolve-element-items.js  __allSettled_call-resolve-element.js  __allSettled_capability-executor-called-twice.js  __allSettled_capability-executor-not-callable.js  __allSettled_capability-resolve-throws-reject.js  __allSettled_ctx-ctor-throws.js  __allSettled_ctx-non-ctor.js  __allSettled_ctx-non-object.js  __allSettled_does-not-invoke-array-setters.js  __allSettled_invoke-resolve-error-reject.js  __allSettled_invoke-resolve-get-error-reject.js  __allSettled_invoke-resolve-get-once-multiple-calls.js  __allSettled_invoke-resolve-get-once-no-calls.js  __allSettled_invoke-resolve-return.js  __allSettled_invoke-resolve.js  __allSettled_invoke-then-error-reject.js  (+331 more)
(+1394 files in other folders)
