opam-version: "1.2"
name: "JS_Parser-runtime"
version: "dev"
maintainer: "Thomas Wood <thomas.wood09@imperial.ac.uk>"
authors: [
  "Daiva Naudziuniene <d.naudziuniene11@imperial.ac.uk>"
  "Conrad Watt <conrad.watt12@imperial.ac.uk>"
  "Thomas Wood <thomas.wood09@imperial.ac.uk>"
  "Petar Maksimovic <p.maksimovic@imperial.ac.uk>"
]
homepage: "https://github.com/resource-reasoning/JS_Parser"
bug-reports: "https://github.com/resource-reasoning/JS_Parser/issues"
license: "TBC"
dev-repo: "https://github.com/resource-reasoning/JS_Parser.git"
libraries: ["JS_Parser-runtime"]

build: []
# install target uses JS_Parser-runtime.install automatically

depends: [
  "findlib"
]

substs: [
  "src/META-runtime"
]
