opam-version: "2.0"
name: "JS_Parser"
version: "dev"
maintainer: "Sacha-Elie Ayoun <s.ayoun17@imeprial.ac.uk>"
authors: [
  "Daiva Naudziuniene <d.naudziuniene11@imperial.ac.uk>"
  "Conrad Watt <conrad.watt12@imperial.ac.uk>"
  "Thomas Wood <thomas.wood09@imperial.ac.uk>"
  "Petar Maksimovic <p.maksimovic@imperial.ac.uk>"
  "Sacha-Elie Ayoun <s.ayoun17@imeprial.ac.uk>"
]
description: "Parser for EcmaScript 5 that allows to include JS Logic annotations, based on Flow-Parser"
homepage: "https://github.com/resource-reasoning/JS_Parser"
bug-reports: "https://github.com/resource-reasoning/JS_Parser/issues"
license: "TBC"
dev-repo: "https://github.com/resource-reasoning/JS_Parser.git"
libraries: ["JS_Parser"]

build: [["dune" "build" "-p" name]]
run-test: [["dune" "runtest"]]
build-doc: [["dune" "build" "@doc"]]

available: [ocaml-version >= "4.04"]
depends: [
  "dune" { build }
  "ocaml" { >="4.04" }
  "yojson"
  "flow_parser"
  "ounit" { test }
]