opam-version: "2.0"
name: "JS_Parser"
version: "dev"
maintainer: "Sacha-Elie Ayoun <s.ayoun17@imeprial.ac.uk>"
authors: [
  "Daiva Naudziuniene <d.naudziuniene11@imperial.ac.uk>"
  "Conrad Watt <conrad.watt12@imperial.ac.uk>"
  "Thomas Wood <thomas.wood09@imperial.ac.uk>"
  "Petar Maksimovic <p.maksimovic@imperial.ac.uk>"
  "Sacha-Elie Ayoun <s.ayoun17@imeprial.ac.uk>"
]
homepage: "https://github.com/resource-reasoning/JS_Parser"
bug-reports: "https://github.com/resource-reasoning/JS_Parser/issues"
license: "TBC"
dev-repo: "git+https://github.com/resource-reasoning/JS_Parser.git"
libraries: ["JS_Parser"]

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest"] { with-test }
  ["dune" "build" "-p" name "@doc"]
  ]

depends: [
  "dune" { build }
  "ocaml" { >="4.04" }
  "flow_parser" #the flow-parser on opam is dead.
  "ounit" { with-test }
  "odoc" { with-doc }
]
decription: "Parser for EcmaScript 5 that allows to include JS Logic annotations, based on Flow_parser"
synopsis: """
Parser for EcmaScript 5 that allows to include JS Logic annotations, based on Flow_parser
This package was originaly using google clojure, and then esprima, and is now completely written in OCaml.
"""